--- a/src/views/DashboardView.module.css
+++ b/src/views/DashboardView.module.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	flex-grow:1;
 	flex-wrap: wrap;
-	gap: 1.5rem;
+	gap: var(--space-medium);
 }
 
 .headerContainer {
